fix: contacts don't overlap anymore while hovered/focused on desktop layout

--- a/src/Components/ContactList/Contact.module.scss
+++ b/src/Components/ContactList/Contact.module.scss
@@ -30,6 +30,10 @@
     @media screen and (min-width: ($tablet)) {
       transform: scale(1.2);
     }
+
+    @media screen and (min-width: ($desktop)) {
+      transform: scale(1.15);
+    }
   }
 
   &:not(:last-child) {
